--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,6 +1,10 @@
 .app.dark {
 	--bg-color: #1f2937;
+	--inverted-bg-color: #f9fafb;
 
 	--primary-color: #94a3b8;
 	--secondary-color: #64748b;
+
+	--inverted-primary-color: #1f2937;
+	--inverted-secondary-color: #4b5563;
 }
