--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -10,6 +10,12 @@
 	--font-line-l: 32px;
 	--font-l: var(--font-size-l) / var(--font-line-l) var(--font-family-main);
 
-  // Sizes
-  --navbar-height: 64px;
+	// sizes
+	--navbar-height: 64px;
+
+	--sidebar-width: 304px;
+	--sidebar-width-collapsed: 88px;
+
+	// transitions
+	--transition: 0.2s ease;
 }
