--- a/src/widgets/Navbar/ui/Navbar.module.scss
+++ b/src/widgets/Navbar/ui/Navbar.module.scss
@@ -5,15 +5,15 @@
 	display: flex;
 	align-items: center;
 
-  padding: 0 16px;
-
+	padding: 0 16px;
 	background-color: var(--inverted-bg-color);
+	transition: var(--transition);
 }
 
 .links {
-  display: flex;
-  align-items: center;
-  gap: 16px;
+	display: flex;
+	align-items: center;
+	gap: 16px;
 
-  margin-left: auto;
+	margin-left: auto;
 }
