--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -8,16 +8,20 @@
 	padding: 16px;
 	background-color: var(--inverted-bg-color);
 	transition: var(--transition);
+
+	&.collapsed {
+		width: var(--sidebar-width-collapsed);
+	}
 }
 
-.collapsed {
-	width: var(--sidebar-width-collapsed);
+.toggle-btn {
+	margin: 0 auto;
 }
 
 .switchers {
 	display: flex;
-  flex-direction: column;
-  align-items: center;
+	flex-direction: column;
+	align-items: center;
 
 	margin-top: auto;
 }
