format: fix styles with stylelint + Resolve errors and warnings

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,27 +1,24 @@
-@import 'reset';
-@import './variables/global';
-@import './themes/light';
-@import './themes/dark';
+@import "reset";
+@import "./variables/global";
+@import "./themes/light";
+@import "./themes/dark";
 
 .App {
-	width: 100%;
-	min-height: 100vh;
-
-	display: flex;
-	flex-direction: column;
-
-	font: var(--font-m);
-
-	background-color: var(--bg-color);
-	color: var(--primary-color);
-	transition-property: background-color var(--transition);
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  font: var(--font-m);
+  background-color: var(--bg-color);
+  color: var(--primary-color);
+  transition-property: background-color var(--transition);
 }
 
 .Content {
-	display: flex;
+  display: flex;
 }
 
 .Page {
-	flex: 1;
-	padding: 16px;
+  flex: 1;
+  padding: 16px;
 }
