--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -20,3 +20,40 @@
 	border: 1px solid var(--primary-color);
 	border-radius: 4px;
 }
+
+.background {
+	color: var(--primary-color);
+	background: var(--bg-color);
+	border: none;
+}
+
+.background-inverted {
+	color: var(--inverted-primary-color);
+	background: var(--inverted-bg-color);
+	border: none;
+}
+
+.square {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding: 0;
+}
+
+.square.size-m {
+	width: var(--font-line-m);
+	height: var(--font-line-m);
+	font: var(--font-m);
+}
+
+.square.size-l {
+	width: var(--font-line-l);
+	height: var(--font-line-l);
+	font: var(--font-l);
+}
+
+.square.size-xl {
+	width: var(--font-line-xl);
+	height: var(--font-line-xl);
+	font: var(--font-xl);
+}
