--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -1,3 +1,10 @@
+.switchers {
+	display: flex;
+	gap: 8px;
+	align-items: center;
+	margin-top: auto;
+}
+
 .Sidebar {
 	position: relative;
 
@@ -14,6 +21,10 @@
 
 	&.collapsed {
 		width: var(--sidebar-width-collapsed);
+
+		.switchers {
+			flex-direction: column;
+		}
 	}
 }
 
@@ -21,11 +32,4 @@
 	position: absolute;
 	right: -32px;
 	bottom: 32px;
-}
-
-.switchers {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	margin-top: auto;
 }
