--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -2,7 +2,7 @@
 	--bg-color: #f9fafb;
 	--inverted-bg-color: #1f2937;
 	--primary-color: #1f2937;
-	--secondary-color: #4b5563;
+	--secondary-color: #566472;
 	--inverted-primary-color: #94a3b8;
 	--inverted-secondary-color: #64748b;
 }
