--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -1,14 +1,6 @@
 :root {
-	--font-family-main:
-		-apple-system,
-		blinkmacsystemfont,
-		"Segoe UI",
-		roboto,
-		oxygen-sans,
-		ubuntu,
-		cantarell,
-		"Helvetica Neue",
-		sans-serif;
+	--font-family-main: -apple-system, blinkmacsystemfont, 'Segoe UI', roboto,
+		oxygen-sans, ubuntu, cantarell, 'Helvetica Neue', sans-serif;
 	--font-size-m: 16px;
 	--font-line-m: 24px;
 	--font-m: var(--font-size-m) / var(--font-line-m) var(--font-family-main);
@@ -26,4 +18,7 @@
 
 	// transitions
 	--transition: 0.2s ease;
+
+	// z-indexes
+	--modal-z-index: 10;
 }
