--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,7 +1,7 @@
-@import "reset";
-@import "./variables/global";
-@import "./themes/light";
-@import "./themes/dark";
+@import 'reset';
+@import './variables/global';
+@import './themes/light';
+@import './themes/dark';
 
 .App {
 	display: flex;
