--- a/src/shared/ui/Modal/Modal.module.scss
+++ b/src/shared/ui/Modal/Modal.module.scss
@@ -22,13 +22,12 @@
 }
 
 .overlay {
-	@include overlay-with-blur;
-
 	position: absolute;
 	z-index: -1;
 	inset: 0;
 
 	opacity: 0.8;
+	background-color: rgb(0 0 0 / 40%);
 
 	transition: 0.3s ease;
 }
