style: fix theme strategy

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -3,15 +3,17 @@
 @import './themes/light';
 @import './themes/dark';
 
+body {
+	font: var(--font-m);
+	color: var(--primary-color);
+}
+
 .App {
 	display: flex;
 	flex-direction: column;
 
 	width: 100%;
 	min-height: 100vh;
-
-	font: var(--font-m);
-	color: var(--primary-color);
 
 	background-color: var(--bg-color);
 
