--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -17,6 +17,7 @@
 }
 
 .outline {
+	color: var(--primary-color);
 	background-color: transparent;
 	border: 1px solid var(--primary-color);
 	border-radius: 4px;
