--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -5,7 +5,8 @@
 
 body {
 	font: var(--font-m);
-	color: var(--primary-color);
+	color: var(--font-primary-color);
+	background-color: var(--bg-color);
 }
 
 .App {
@@ -13,7 +14,7 @@ body {
 	flex-direction: column;
 
 	width: 100%;
-	min-height: 100vh;
+	min-height: 100dvh;
 
 	background-color: var(--bg-color);
 
