--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -17,8 +17,14 @@
 	--sidebar-width-collapsed: 80px;
 
 	// transitions
-	--transition: 0.2s ease;
+	--transition-hover: 0.2s ease;
+
+	// focus
+	--outline: 2px solid var(--focus-outline-color);
 
 	// z-indexes
 	--modal-z-index: 10;
+
+	// border-radius
+	--border-radius: 0.375em;
 }
