--- a/src/shared/ui/Input/Input.module.scss
+++ b/src/shared/ui/Input/Input.module.scss
@@ -1,3 +1,25 @@
-.Input {
-	display: block;
+.input {
+	padding: 0.5em 0.75em;
+
+	color: var(--font-primary-color);
+
+	background-color: transparent;
+	border: 1px solid var(--border-color);
+	border-radius: var(--border-radius);
+	box-shadow: inset 0 0.0625em 0.125em rgb(10 10 10 / 5%);
+
+	transition: border-color var(--transition-hover);
+
+	&::placeholder {
+		color: var(--placeholder-color);
+	}
+
+	&:hover {
+		border-color: var(--border-color-hover);
+	}
+
+	&:focus {
+		border-color: #3d8fec;
+		outline: var(--outline);
+	}
 }
