style: refactor component styles and layout

--- a/src/shared/ui/Loader/Loader.module.scss
+++ b/src/shared/ui/Loader/Loader.module.scss
@@ -11,7 +11,7 @@
 	width: 6px;
 	height: 6px;
 
-	background: var(--inverted-bg-color);
+	background: var(--primary-color);
 	border-radius: 50%;
 
 	animation: loading 1.2s linear infinite;
