--- a/src/widgets/ThemeSwitcher/ui/ThemeSwitcher.module.scss
+++ b/src/widgets/ThemeSwitcher/ui/ThemeSwitcher.module.scss
@@ -1,6 +1,6 @@
 .ThemeSwitcher {
 	svg path {
-		fill: var(--inverted-primary-color);
-		transition: var(--transition);
+		fill: var(--font-primary-color);
+		transition: var(--transition-200);
 	}
 }
