--- a/src/shared/ui/Modal/Modal.module.scss
+++ b/src/shared/ui/Modal/Modal.module.scss
@@ -53,7 +53,7 @@
 
 .content {
 	padding: 16px;
-	background-color: var(--bg-color);
+	background-color: var(--primary-color);
 	border-radius: 12px;
 	animation: content-opening 0.3s ease-out;
 }
