--- a/src/widgets/Navbar/ui/Navbar.module.scss
+++ b/src/widgets/Navbar/ui/Navbar.module.scss
@@ -7,7 +7,6 @@
 	height: var(--navbar-height);
 	padding: 0 16px;
 
-	background-color: var(--inverted-bg-color);
-
-	transition: var(--transition);
+	background-color: var(--header-color);
+	border-bottom: 1px solid var(--delimiter-color);
 }
